@@ -13,3 +13,9 @@ before_script:
     - pip install --user codecov
     - php artisan migrate --database=sqlite --force
     - php artisan key:generate
+
+script:
+    - vendor/bin/phpunit --coverage-clover=coverage.xml
+
+after_success:
+- bash <(curl -s https://codecov.io/bash)
